--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query-devtools": "^5.75.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
