--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "recharts": "^2.15.3",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@tanstack/react-query-devtools": "^5.75.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
